--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
