--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "homepage": "/tonalities/",
   "name": "tonalities",
@@ -13,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "material-ui-confirm": "^3.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
