--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,18 @@ nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+    spec: '@yarnpkg/plugin-interactive-tools'
 
 yarnPath: .yarn/releases/yarn-3.4.1.cjs
+
+packageExtensions:
+  'eslint-plugin-flowtype@*':
+    peerDependenciesMeta:
+      '@babel/plugin-syntax-flow':
+        optional: true
+      '@babel/plugin-transform-react-jsx':
+        optional: true
+  '@testing-library/user-event@*':
+    peerDependenciesMeta:
+      '@testing-library/dom':
+        optional: true
