--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "/tonalities/",
+  "homepage": "/sherlock-tonalities/",
   "name": "tonalities",
   "version": "0.2.0",
   "private": true,
