--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -23,5 +23,5 @@ jobs:
 
     - name: Build
       run: |
-        npm install
+        yarn install
         npx webpack
