--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,15 +1,14 @@
 name: Staging deployment
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "staging" ]
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Build
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
@@ -17,6 +16,7 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn build
+    - name: Upload
     - uses: actions/upload-artifact@v3
       with:
         name: deployment
