--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.128",
-    "@mui/material": "^5.11.14",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/material": "^5.13.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "6.9.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "6.14.0",
     "react-scripts": "5.0.1",
+    "react-slider-color-picker": "^2.0.0",
     "sherlock-sparql-queries": "https://github.com/sherlock-iremus/sherlock-sparql-queries.git#main"
   },
   "scripts": {
