--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://sherlock-iremus.github.io/sherlock-tonalities/",
+  "homepage": "https://data-iremus.huma-num.fr/tonalities/",
   "name": "tonalities",
-  "version": "0.2.0",
-  "private": true,
+  "version": "2.0",
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
