--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,19 +1,19 @@
 nodeLinker: node-modules
 
+packageExtensions:
+  "@testing-library/user-event@*":
+    peerDependenciesMeta:
+      "@testing-library/dom":
+        optional: true
+  eslint-plugin-flowtype@*:
+    peerDependenciesMeta:
+      "@babel/plugin-syntax-flow":
+        optional: true
+      "@babel/plugin-transform-react-jsx":
+        optional: true
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
+    spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-3.4.1.cjs
-
-packageExtensions:
-  'eslint-plugin-flowtype@*':
-    peerDependenciesMeta:
-      '@babel/plugin-syntax-flow':
-        optional: true
-      '@babel/plugin-transform-react-jsx':
-        optional: true
-  '@testing-library/user-event@*':
-    peerDependenciesMeta:
-      '@testing-library/dom':
-        optional: true
+yarnPath: .yarn/releases/yarn-3.6.3.cjs
