--- a/.github/workflows/deploy-to-data-iremus.yml
+++ b/.github/workflows/deploy-to-data-iremus.yml
@@ -16,7 +16,6 @@ jobs:
   deploy-to-data-iremus:
     runs-on: [self-hosted, linux, ARM64]
     steps:
-      - name: 'Checkout Repository'
-        uses: actions/checkout@v3
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@v3
+    - name: Calling deploy script
+      shell: bash
+      run: ./deploy.sh
