--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,9 @@ jobs:
         with:
           node-version: 18
           cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install
+      - name: Build
+        run: yarn build
       - name: Deploy
-        run: bash deploy.sh ${{ github.iremus_server_url }}
+        run: ls -la && echo ${{ github.iremus_server_url }}
