--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,4 @@ jobs:
       - name: Build
         run: yarn build
       - name: Deploy
-        run: mv dist tonalities
-        run: scp -r tonalities ${{ github.iremus_server_url }}:sherlock/apache/public_html/
+        run: mv dist tonalities && scp -r tonalities ${{ github.iremus_server_url }}:sherlock/apache/public_html/
