--- a/.github/workflows/deploy-to-data-iremus.yml
+++ b/.github/workflows/deploy-to-data-iremus.yml
@@ -6,9 +6,8 @@
 # Public documentation: https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-dependency-review#dependency-review-enforcement
 name: 'deploy-to-data-iremus'
 on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ['prod']
+  workflow_dispatch:
+
 permissions:
   contents: read
 
@@ -16,6 +15,6 @@ jobs:
   deploy-to-data-iremus:
     runs-on: [self-hosted, linux]
     steps:
-    - name: Calling deploy script
-      shell: bash
-      run: bash /home/iremus/github_runners/deploy.sh 
+      - name: Calling deploy script
+        shell: bash
+        run: bash /home/iremus/github_runners/deploy.sh
