--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Build
-        run: yarn build
+        run: yarn build --mode staging
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
