--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,3 +36,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           source: 'deploy.tar'
           target: '~/sherlock/apache/public_html/tonalities'
+          overwrite: true
