--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,18 +22,13 @@ jobs:
         run: yarn install
       - name: Build
         run: yarn build
-      - name: Archive
-        run: |
-          ls
-          mkdir ../build
-          cp -TR ./tonalities ../build
-          tar -cvf deploy.tar ../build/
       - name: Deploy
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          source: 'deploy.tar'
+          source: tonalities/*
           target: '~/sherlock/apache/public_html/tonalities'
           overwrite: true
+          debug: true
