--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,12 @@ jobs:
       - name: Build
         run: yarn build
       - name: Deploy
-        uses: appleboy/scp-action@master
+        uses: garygrossgarten/github-action-scp@release
         with:
+          local: tonalities
+          remote: ~/sherlock/apache/public_html/tonalities
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
+          username: ${{ secrets.USER }}
+          privateKey: ${{ secrets.KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          source: tonalities/*
-          target: '~/sherlock/apache/public_html/tonalities'
-          overwrite: true
-          debug: true
+          dotfiles: true
