--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -17,6 +17,7 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_ed25519
+          ssh-add - <<<"${{ secrets.SSH_PASS }}"
 
       - name: SSH to Ubuntu Server
         run: |
