--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,24 +1,16 @@
-name: SSH to Ubuntu Server
-
+name: SSH
 on:
   push:
     branches:
       - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_FELIX }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_ed25519
-          echo -n "${{ secrets.SSH_PASS }}" | ssh-add -k -
-
-      - name: SSH to Ubuntu Server
-        run: |
-          ssh tbottini@cchum-kvm-data-iremus.in2p3.fr ls
+      - name: SSH
+        uses: appleboy/ssh-action@latest
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_FELIX }}
+          script: whoami
