--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: SSH
-        uses: appleboy/ssh-action@latest
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
