--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -14,4 +14,6 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_FELIX }}
           passphrase: ${{ secrets.SSH_PASS }}
+          fingerprint: ${{ secrets.SSH_FINGERPRINT }}
           script: whoami
+
