--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -10,10 +10,10 @@ jobs:
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
+          echo "${{ secrets.FINGERPRINT }}" > ~/.ssh/known_hosts
           echo "${{ secrets.KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_ed25519
-          ssh-keyscan -t rsa data-iremus.huma-num.fr >> ~/.ssh/known_hosts
       - name: SSH to Ubuntu Server
         run: ssh tbottini@cchum-kvm-data-iremus.in2p3.fr whoami
