--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -5,16 +5,14 @@ on:
       - main
 jobs:
   deploy:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_ed25519
-      - name: SSH to Ubuntu Server
-        run: ssh -v -o StrictHostKeyChecking=no tbottini@cchum-kvm-data-iremus.in2p3.fr ls
-
-        
+      - name: SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          fingerprint: ${{ secrets.FINGERPRINT }}
+          script: whoami
