--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "homepage": "https://data-iremus.huma-num.fr/tonalities/",
   "name": "tonalities",
   "version": "2.0",
+  "type": "module",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
