--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://data-iremus.huma-num.fr/tonalities/",
   "name": "tonalities",
-  "version": "2.0",
+  "version": "2.1",
   "type": "module",
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.21.1",
+    "react-window": "^1.8.10",
     "verovio": "^4.1.0",
     "vite": "^5.0.11",
     "vite-plugin-svgr": "^4.2.0"
