--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "midi-player-js": "^2.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.21.1",
     "react-window": "^1.8.10",
+    "smplr": "^0.13.3",
     "verovio": "^4.1.0",
     "vite": "^5.0.11",
     "vite-plugin-svgr": "^4.2.0"
