--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: ['midi-player']
+    branches: ['main']
   workflow_dispatch:
 
 permissions:
@@ -37,7 +37,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload dist repository
           path: './tonalities'
       - name: Deploy to GitHub Pages
         id: deployment
