--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "midi-player-js": "^2.0.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.24.1",
     "react-window": "^1.8.10",
+    "smplr": "^0.15.1",
     "verovio": "^4.2.0",
     "vite": "^5.3.3",
     "vite-plugin-svgr": "^4.2.0"
@@ -26,5 +28,5 @@
     "serve": "vite preview",
     "deploy": "./deploy.sh"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.4.0"
 }
