--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.1",
   "type": "module",
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
@@ -28,5 +29,5 @@
     "serve": "vite preview",
     "deploy": "./deploy.sh"
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.5.3"
 }
